--- a/notebooks/lv/tests/check_metrics.ipynb
+++ b/notebooks/lv/tests/check_metrics.ipynb
@@ -164,7 +164,7 @@
     "            subsets_criteria=\"z2\",\n",
     "            n_clusters=75,\n",
     "            cluster_criteria=\"angles3\",\n",
-    "            clusters_vector_ref=np.asarray([0,0,1]),\n",
+    "            clusters_vector_ref=[0,0,1],\n",
     "            t=0.0,\n",
     "        )"
    ]
