--- a/notebooks/lv/tests/test_extract_geometrics_typeA.ipynb
+++ b/notebooks/lv/tests/test_extract_geometrics_typeA.ipynb
@@ -24,12 +24,7 @@
    "outputs": [],
    "source": [
     "from project_heart.examples import get_lv_typeA\n",
-    "lv = get_lv_typeA(filepath=\"C:/Users/igorp/Downloads/0.28_70.00_40.00_LVMYO_HEX8_83648_wr.xplt\", statesfile=None,\n",
-    "                  id_region_kwargs={\n",
-    "                       \"border_thresh_base\":2, \n",
-    "                        \"border_thresh_endo\":2, \n",
-    "                        \"border_thresh_epi\":1,\n",
-    "                  })"
+    "lv = get_lv_typeA(filepath=\"C:/Users/igorp/Downloads/0.28_70.00_40.00_LVMYO_HEX8_83648_wr.xplt\", statesfile=None)"
    ]
   },
   {
@@ -42,98 +37,6 @@
     "        scalars=LV_MESH_DATA.SURFS_DETAILED,\n",
     "        categorical=True,\n",
     "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# spks = lv.get_speckles(spk_collection=\"circ-6\", spk_group=\"endo\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# names = [\"subapex\", \"apex\", \"superapex\", \"submid\", \"mid\", \"supermid\", \"subbase\", \"base\", \"superbase\"]\n",
-    "k = 0.89\n",
-    "d = 1.5\n",
-    "spks1 = lv.create_speckles(\n",
-    "            collection=\"MANUAL_CALC_CIRC_6\",\n",
-    "            group=\"endo\",\n",
-    "            name=\"superbase\",\n",
-    "            from_nodeset=LV_SURFS.ENDO,\n",
-    "            d=d,\n",
-    "            k=k,\n",
-    "            normal_to=[0.0, 0.0, 1.0],\n",
-    "            n_subsets=6,\n",
-    "            subsets_criteria=\"angles\",\n",
-    "            cluster_criteria=\"angles3\",\n",
-    "            n_clusters=16,\n",
-    "            t=0.0,\n",
-    "        )\n",
-    "_ = lv.create_speckles(\n",
-    "            collection=\"MANUAL_CALC_CIRC_6\",\n",
-    "            group=\"epi\",\n",
-    "            name=\"superbase\",\n",
-    "            from_nodeset=LV_SURFS.EPI,\n",
-    "            d=d,\n",
-    "            k=k,\n",
-    "            normal_to=[0.0, 0.0, 1.0],\n",
-    "            n_subsets=6,\n",
-    "            subsets_criteria=\"angles\",\n",
-    "            cluster_criteria=\"angles3\",\n",
-    "            n_clusters=16,\n",
-    "            t=0.0,\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# spks = lv.get_speckles(spk_collection=\"MANUAL_CALC_CIRC_6\")\n",
-    "# lv.plot_speckles(spks, show_longitudinal_line=True, show_clusters_centers=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_ = lv.create_speckles(\n",
-    "            collection=\"MANUAL_CALC_LONG_1\",\n",
-    "            group=\"endo\",\n",
-    "            name=\"0.0\",\n",
-    "            from_nodeset=LV_SURFS.ENDO,\n",
-    "            exclude_nodeset=LV_SURFS.BASE, # does not afect ideal case\n",
-    "            d=1.00,\n",
-    "            k=0.6,\n",
-    "            normal_to=[1.0, 0.0, 0.0],\n",
-    "            n_subsets=0,\n",
-    "            subsets_criteria=\"z2\",\n",
-    "            n_clusters=30,\n",
-    "            cluster_criteria=\"angles3\",\n",
-    "            clusters_vector_ref=np.asarray([0,0,1]),\n",
-    "            t=0.0,\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# spks = lv.get_speckles(spk_collection=\"MANUAL_CALC_LONG_1\")\n",
-    "# lv.plot_speckles(spks, show_longitudinal_line=True, show_clusters_centers=True)"
    ]
   },
   {
@@ -163,18 +66,18 @@
     "            \"reduce_by\":{\"group\"}\n",
     "            },\n",
     "        \"radial_distance\": {\n",
-    "            \"spks\": {\"spk_collection\":\"MANUAL_CALC_CIRC_6\"},\n",
+    "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
     "            \"approach\":\"moving_vector\",\n",
     "            \"reduce_by\":{\"group\", \"name\", \"group_name\"},\n",
     "            },\n",
     "        \"radial_length\": {\n",
-    "            \"spks\": {\"spk_collection\":\"MANUAL_CALC_CIRC_6\"},\n",
+    "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
     "            \"approach\":\"moving_centers\",\n",
     "            \"reduce_by\":{\"group\", \"name\", \"group_name\"},\n",
     "            },\n",
     "        \"wall_thickness\": {\n",
-    "            \"endo_spks\": {\"spk_group\":\"endo\", \"spk_collection\":\"MANUAL_CALC_CIRC_6\"},\n",
-    "            \"epi_spks\": {\"spk_group\":\"epi\", \"spk_collection\":\"MANUAL_CALC_CIRC_6\"},\n",
+    "            \"endo_spks\": {\"spk_group\":\"endo\", \"spk_collection\":\"circ-6\"},\n",
+    "            \"epi_spks\": {\"spk_group\":\"epi\", \"spk_collection\":\"circ-6\"},\n",
     "            \"approach\":\"radial_distance\",\n",
     "            \"reduce_by\":{\"name\"},\n",
     "            },\n",
@@ -189,12 +92,12 @@
     "                },\n",
     "            },\n",
     "        \"global_longitudinal_length\": {\n",
-    "            \"spks\": {\"spk_collection\":\"MANUAL_CALC_LONG_1\"},\n",
+    "            \"spks\": {\"spk_collection\":\"long-1\"},\n",
     "            \"approach\":\"k_ids\",\n",
     "            \"reduce_by\":{\"group\", \"group_name\"},\n",
     "            },\n",
     "        \"circumferential_length\": {\n",
-    "            \"spks\": {\"spk_collection\":\"MANUAL_CALC_CIRC_6\"},\n",
+    "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
     "            \"reduce_by\":{\"group\"},\n",
     "            },\n",
     "        \"global_circumferential_length\": {\n",
@@ -202,7 +105,7 @@
     "            \"reduce_by\":{\"group\", \"group_name\"},\n",
     "            },\n",
     "        \"angle_rotation\": {\n",
-    "            \"spks\": {\"spk_collection\":\"MANUAL_CALC_CIRC_6\"},\n",
+    "            \"spks\": {\"spk_collection\":\"circ-6\"},\n",
     "            \"reduce_by\":{\"group\", \"name\"},\n",
     "            }\n",
     "        }\n",
@@ -215,44 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dfoi = df[[\n",
-    "    \"timesteps\",\n",
-    "    lv.STATES.LONGITUDINAL_DISTANCE_ENDO.value, \n",
-    "    lv.STATES.RADIAL_DISTANCE_ENDO_SUPERBASE.value, \n",
-    "    lv.STATES.RADIAL_DISTANCE_EPI_SUPERBASE.value,\n",
-    "    lv.STATES.WALL_THICKNESS_SUPERBASE.value, \n",
-    "    \"global_longitudinal_length_endo_0.0\", \n",
-    "    lv.STATES.GLOBAL_CIRCUMFERENTIAL_LENGTH_ENDO_SUPERBASE.value,     \n",
-    "    ]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfoi.to_csv(\"test_0.28_70.00_40.00_LVMYO_HEX8_83648_wr.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# spks = lv.get_speckles(spk_collection=\"circ-1\")\n",
-    "# lv.plot_speckles(spks,  show_clusters=True, show_clusters_centers=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spks = lv.get_speckles(spk_collection=\"MANUAL_CALC_LONG_1\")\n",
-    "lv.plot_speckles(spks, show_longitudinal_line=True, show_clusters_centers=True)"
+    "lv.speckles.to_json(\"speckles_typeA.json\")"
    ]
   }
  ],
