minor update to extract geometrics script

--- a/notebooks/lv/tests/test_extract_geometrics_typeA.ipynb
+++ b/notebooks/lv/tests/test_extract_geometrics_typeA.ipynb
@@ -40,6 +40,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LV_GEO_TYPES.TYPE_A"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
