--- a/notebooks/lv/tests/cylindrical_coordinates.ipynb
+++ b/notebooks/lv/tests/cylindrical_coordinates.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,22 +19,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:LV_RegionIdentifier.identify_regions_typeA:Identifying regions from 'type A' geometry.\n",
+      "INFO:LV_RegionIdentifier.identify_endo_epi_base_borders_from_nodesets:len(endo_base): 329\n",
+      "INFO:LV_RegionIdentifier.identify_endo_epi_base_borders_from_nodesets:len(epi_base): 369\n"
+     ]
+    }
+   ],
    "source": [
-    "from project_heart.examples import get_lv_ideal\n",
-    "lv = get_lv_ideal(\"C:/Users/igorp/Downloads/77.81_67.13_157_77.81_67.13_19.07.2022_LVRNN_IDEAL_v4_1.xplt\", save_spk_dict=True)"
+    "from project_heart.examples import get_lv_typeA\n",
+    "lv = get_lv_typeA(\"C:/Users/igorp/Downloads/56.15_69.31_25_56.15_69.31_20.07.2022_LVRNN_TYPEA_V4.xplt\", save_spk_dict=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "cy_stress = lv.convert_to_cylindrical_coordinates(\"stress\")\n",
     "cy_strain = lv.convert_to_cylindrical_coordinates(\"Lagrange strain\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indexes = [lv.states.get_timestep_index(t) for t in [0, 0.18, 0.33, 0.36, 0.8]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for i in indexes:\n",
+    "    \n",
+    "    lv.mesh[\"stress_r_{}\".format(i)] = cy_stress[i, :, 0]\n",
+    "    lv.mesh[\"stress_theta_{}\".format(i)] = cy_stress[i, :, 1]\n",
+    "    lv.mesh[\"stress_z_{}\".format(i)] = cy_stress[i, :, 1]\n",
+    "\n",
+    "    lv.mesh[\"strain_r_{}\".format(i)] = cy_strain[i, :, 0]\n",
+    "    lv.mesh[\"strain_theta_{}\".format(i)] = cy_strain[i, :, 1]\n",
+    "    lv.mesh[\"strain_z_{}\".format(i)] = cy_strain[i, :, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.to_vtk(\"C:/Users/igorp/Downloads/56.15_69.31_25_56.15_69.31_20.07.2022_LVRNN_TYPEA_V4.vtk\")"
    ]
   },
   {
