--- a/notebooks/lv/tests/test_extract_geometrics_typeA.ipynb
+++ b/notebooks/lv/tests/test_extract_geometrics_typeA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,10 @@
    "outputs": [],
    "source": [
     "from project_heart.examples import get_lv_typeA\n",
-    "lv = get_lv_typeA(filepath=\"C:/Users/igorp/Downloads/0.28_70.00_40.00_LVMYO_HEX8_83648_wr.xplt\", statesfile=None)"
+    "# lv = get_lv_typeA(filepath=\"C:/Users/igorp/Downloads/0.28_70.00_40.00_LVMYO_HEX8_83648_wr.xplt\", statesfile=None)\n",
+    "# lv = get_lv_typeA(filepath=\"C:/Users/igorp/Downloads/56.15_69.31_25_56.15_69.31_20.07.2022_LVRNN_TYPEA_V4.xplt\", statesfile=None)\n",
+    "# lv = get_lv_typeA(filepath=\"C:/Users/igorp/Downloads/52.85_60.01_70_52.85_60.01_20.07.2022_LVRNN_TYPEA_V4.xplt\", statesfile=None)\n",
+    "lv = get_lv_typeA(filepath=\"C:/Users/igorp/Downloads/67.22_68.64_1_67.22_68.64_02.08.2022_LVRNN_TYPEA_V4.xplt\", statesfile=None)\n"
    ]
   },
   {
@@ -127,7 +130,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv.speckles.to_json(\"speckles_typeA.json\")"
+    "lv.states.get_timestep_index(0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cl = df[\"global_circumferential_length_endo\"]\n",
+    "cst = ((cl - cl[10]) / cl[10]) * 100\n",
+    "cst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "fig, ax = plt.subplots(1,1,figsize=(10,5))\n",
+    "ax.plot(lv.states.timesteps[10:]-0.1, cst[10:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cst.max()"
    ]
   }
  ],
