--- a/notebooks/lv/demos/boundary_conditions_on_LVTypeA.ipynb
+++ b/notebooks/lv/demos/boundary_conditions_on_LVTypeA.ipynb
@@ -22,6 +22,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "filepath = Path(\"C:/Users/igorp/Downloads/0.0_60.00_60.00_LVIDEAL_HEX8.xplt\")\n",
+    "lv = LV.from_file(filepath)\n",
+    "lv.identify_regions(LV_GEO_TYPES.IDEAL)\n",
+    "a = lv.transform_point_data_to_cell_data(\n",
+    "        LV_MESH_DATA.SURFS, \"max\", axis=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.to_vtk(\"lv_ideal.vtk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "lv = LV.from_pyvista_read(\"../sample_files/lvhexmesh_typeA.vtk\")"
    ]
   },
@@ -31,15 +53,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lv.identify_regions(LV_GEO_TYPES.TYPE_A,\n",
-    "  endo_epi_args=dict(threshold=85.0),\n",
-    ")\n",
+    "lv.identify_regions(LV_GEO_TYPES.TYPE_A, endo_epi_args=dict(threshold=85.0))\n",
     "\n",
-    "lv.plot(\"surface\", scalars=LV_MESH_DATA.SURFS, \n",
-    "        vnodes=[\n",
-    "          (LV_VIRTUAL_NODES.BASE, \"red\"),\n",
-    "          ],\n",
-    "    cmap=\"tab20_r\")"
+    "lv.plot(\"surface\", scalars=LV_MESH_DATA.SURFS)"
    ]
   },
   {
@@ -50,8 +66,8 @@
    "source": [
     "base_bc = lv.create_spring_rim_bc(\"BASE_BC\",\n",
     "                                    LV_SURFS.BASE,\n",
-    "                                    dist_from_c=5.0,\n",
-    "                                    r_alpha=0.7)"
+    "                                    dist_from_c=10.0,\n",
+    "                                    r_alpha=0.85)"
    ]
   },
   {
@@ -93,14 +109,62 @@
     "plotter.enable_shadows()\n",
     "plotter.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = lv.transform_point_data_to_cell_data(\n",
+    "        LV_MESH_DATA.SURFS, \"max\", axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.unique(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lv.to_vtk(\"lv_typeA.vtk\")\n",
+    "base_rim_string_lines.save(\"base_rim_string_lines.vtk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nodes = base_bc[LV_RIM.NODES.value]\n",
+    "elems = base_bc[LV_RIM.ELEMENTS.value]\n",
+    "\n",
+    "rim = LV.from_nodes_elements(nodes, elems)\n",
+    "rim.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rim.to_vtk(\"rim.vtk\")"
+   ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "364647f439eeb51cea9fa1ad47f7b03a5a9ed5157a0ffe2dd43bcec2d09df37e"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.7 (conda)",
+   "display_name": "Python 3.9.7 ('project_heart')",
    "language": "python",
    "name": "python3"
   },
@@ -116,7 +180,12 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "a4b270fe5129ef310552b5197d637a230d47119f1e46f0b92ff32b1c5f5c5425"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
